compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__field_access.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "\n        pub type Person {\n          Person(username: String, name: String, age: Int)\n        }\n        pub fn main() {\n          let given_name = \"jack\"\n          let raiden = Person(\"raiden\", \"jack\", 31)\n          case given_name {\n            name if name == raiden.name -> \"It's jack\"\n            _ -> \"It's not jack\"\n          }\n        }\n        "
---
----- SOURCE CODE

        pub type Person {
          Person(username: String, name: String, age: Int)
        }
        pub fn main() {
          let given_name = "jack"
          let raiden = Person("raiden", "jack", 31)
          case given_name {
            name if name == raiden.name -> "It's jack"
            _ -> "It's not jack"
          }
        }
        

----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Person extends $CustomType {
  constructor(username, name, age) {
    super();
    this.username = username;
    this.name = name;
    this.age = age;
  }
  
  withFields(fields) {
    return new this.constructor(
      'username' in fields ? fields.username : this.username,
      'name' in fields ? fields.name : this.name,
      'age' in fields ? fields.age : this.age,
    );
  }
}

export function main() {
  let given_name = "jack";
  let raiden = new Person("raiden", "jack", 31);
  if (given_name === raiden.name) {
    let name = given_name;
    return "It's jack";
  } else {
    return "It's not jack";
  }
}
