compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__imported_aliased_ok.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "import gleam.{Ok as Y}\npub type X {\n  Ok\n}\npub fn func() {\n  case Y {\n    y if y == Y -> True\n    _ -> False\n  }\n}\n"
---
----- SOURCE CODE
import gleam.{Ok as Y}
pub type X {
  Ok
}
pub fn func() {
  case Y {
    y if y == Y -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok as Y, CustomType as $CustomType, isEqual } from "../gleam.mjs";

export class Ok extends $CustomType {}
export const X$Ok$const = new Ok();
export const X$Ok = () => X$Ok$const;
export const X$isOk = (value) => value instanceof Ok;

export function func() {
  let $ = (var0) => { return new Y(var0); };
  let y = $;
  if (isEqual(y, (var0) => { return new Y(var0); })) {
    return true;
  } else {
    return false;
  }
}
