compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__module_access_aliased.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "\n          import hero/submodule as myhero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == myhero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
---
----- SOURCE CODE

          import hero/submodule as myhero
          pub fn main() {
            let name = "Tony Stark"
            case name {
              n if n == myhero.ironman.name -> True
              _ -> False
            }
          }
        

----- COMPILED JAVASCRIPT
import * as $myhero from "../../package/hero/submodule.mjs";

export function main() {
  let name = "Tony Stark";
  if (name === $myhero.ironman.name) {
    let n = name;
    return true;
  } else {
    return false;
  }
}
