compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__module_list_access.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn main() {\n            let names = [\"Tony Stark\", \"Bruce Wayne\"]\n            case names {\n              n if n == hero.heroes -> True\n              _ -> False\n            }\n          }\n        "
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let names = ["Tony Stark", "Bruce Wayne"]
            case names {
              n if n == hero.heroes -> True
              _ -> False
            }
          }
        

----- COMPILED JAVASCRIPT
import * as $hero from "../../package/hero.mjs";
import { List$Empty$const as $List$Empty$const, prepend as listPrepend, isEqual } from "../gleam.mjs";

export function main() {
  let names = listPrepend(
    "Tony Stark",
    listPrepend("Bruce Wayne", $List$Empty$const),
  );
  let n = names;
  if (isEqual(n, $hero.heroes)) {
    return true;
  } else {
    return false;
  }
}
